--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/video-tape.svg" /><!-- should probably be replaced -->
+  <link rel="icon" href="%PUBLIC_URL%/logoActive.svg" /><!-- should probably be replaced -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Progressive web app for finding the perfect movie to watch with a friend." />
-  <meta name="author" content="Helen Maher" />
+  <meta name="author" content="" />
   <meta property="og:type" content="web app" />
-  <meta property="og:image" content="%PUBLIC_URL%/video-tape.svg" /><!-- should probably be replaced -->
+  <meta property="og:image" content="%PUBLIC_URL%/logoActive.svg" /><!-- should probably be replaced -->
   <meta property="og:image:type" content="image/svg" />
   <meta property="og:image:width" content="825" />
   <meta property="og:image:height" content="825" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/video-tape.svg" /><!-- should probably be replaced -->
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoActive.svg" /><!-- should probably be replaced -->
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Movie Tinder</title>
+  <title>Filmably</title>
 </head>
 
 <body>
