--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <!-- <link rel="icon" href="%PUBLIC_URL%/logoActive.svg" /> -->
+        <link rel="icon" href="%PUBLIC_URL%/logoActive.svg" />
         <!-- should probably be replaced -->
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
@@ -12,18 +12,18 @@
         />
         <meta name="author" content="" />
         <meta property="og:type" content="web app" />
-        <!-- <meta property="og:image" content="%PUBLIC_URL%/logoActive.svg" /> -->
+        <meta property="og:image" content="%PUBLIC_URL%/logoActive.svg" />
         <!-- should probably be replaced -->
         <meta property="og:image:type" content="image/svg" />
         <meta property="og:image:width" content="825" />
         <meta property="og:image:height" content="825" />
-        <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoActive.svg" /> -->
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoActive.svg" />
         <!-- should probably be replaced -->
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-        <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
